@@ -18,34 +18,46 @@
 
         public override bool Equals(object obj)
         {
-            // Pattern matching
-            var other = obj as DummyStringModel;
 
-            // This compiles in VS 2015 / C#6, but does not work as expected
-            // if (other == null) { return false; }
-
+            // C# 7 Pattern matching
             // This breaks in VS 2015 / C#6 compiler
             // https://www.danielcrabtree.com/blog/152/c-sharp-7-is-operator-patterns-you-wont-need-as-as-often
-            if (other is null)
+            
+            // Option 1
+            //var model = obj as DummyStringModel;
+            //if (model is null)
+            //{
+            //    // model is null, is NOT equivalent to model == null
+            //    // uses Object.Equals(model, null);
+            //    return false;
+            //}
+
+            // Option 2 (cleaner): 
+            //if (!(obj is DummyStringModel model))
+            //{
+            //    return false;
+            //}
+
+            // C# 6 polyfill
+            var model = (DummyStringModel) obj;
+            if ( object.Equals(model, null))
             {
-                // other is null, is NOT equivalent to other == null
-                // uses Object.Equals(other, null);
                 return false;
             }
 
-            if (Id != other.Id ||
-                Field1 != other.Field1 ||
-                Field2 != other.Field2 ||
-                Field3 != other.Field3 ||
-                Field4 != other.Field4 ||
-                Field5 != other.Field5 ||
-                Field6 != other.Field6 ||
-                Field7 != other.Field7 ||
-                Field8 != other.Field8 ||
-                Field9 != other.Field9 ||
-                Field10 != other.Field10 ||
-                Field11 != other.Field11 ||
-                Field12 != other.Field12
+            if (Id != model.Id ||
+                Field1 != model.Field1 ||
+                Field2 != model.Field2 ||
+                Field3 != model.Field3 ||
+                Field4 != model.Field4 ||
+                Field5 != model.Field5 ||
+                Field6 != model.Field6 ||
+                Field7 != model.Field7 ||
+                Field8 != model.Field8 ||
+                Field9 != model.Field9 ||
+                Field10 != model.Field10 ||
+                Field11 != model.Field11 ||
+                Field12 != model.Field12
             )
                 return false;
 
